--- a/SDE_LAB3-main/index.html
+++ b/SDE_LAB3-main/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joke Fetcher App</title>
+    <script src="/app2.js"></script>
 </head>
 <body>
-    <input type="text" id="jokePrompt" placeholder="Enter joke keyword...">
-    <button onclick="fetchJoke()">Get Joke</button>
-    <script src="/script.js"></script>
+    <input type="text" id="jokePrompt" placeholder="Enter joke prompt (currently not used)...">
+    <button onclick="fetchJokeAndTranslate()">Get and Translate Joke</button>
 </body>
 </html>
